changed authorization access of mvc controllers

--- a/src/Clients/StudentSystem.Clients.Mvc/404.html
+++ b/src/Clients/StudentSystem.Clients.Mvc/404.html
@@ -6,9 +6,9 @@
         <title>
             Student System | 404
         </title>
-
-        <link href="Content/bootstrap.min.css" rel="stylesheet" />
-        <link href="Content/Site.css" rel="stylesheet" />
+        
+        <link href="/Content/bootstrap.min.css" rel="stylesheet" />
+        <link href="/Content/Site.css" rel="stylesheet" />
     </head>
     <body>
         <div class="navbar navbar-inverse navbar-fixed-top">
