--- a/src/Clients/StudentSystem.Clients.Mvc/500.html
+++ b/src/Clients/StudentSystem.Clients.Mvc/500.html
@@ -7,8 +7,8 @@
             Student System | 500
         </title>
         
-        <link href="Content/bootstrap.min.css" rel="stylesheet" />
-        <link href="Content/Site.css" rel="stylesheet" />
+        <link href="/Content/bootstrap.min.css" rel="stylesheet" />
+        <link href="/Content/Site.css" rel="stylesheet" />
     </head>
     <body>
         <div class="navbar navbar-inverse navbar-fixed-top">
